<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".SeleccionarTrabajadorActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/msg_select_worker"
        android:textAlignment="center"
        android:textSize="18sp"
        android:layout_marginTop="100dp"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_marginTop="50dp"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/rbtTH"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtTH"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rbtTC"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbtTC"
            android:textSize="18sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:layout_gravity="end"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnSiguiente"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:text="@string/btnSiguiente"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>