<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".DatosActivity">

    <TextView
        android:id="@+id/tvDesarrollador"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tvDesarrollador"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tvMiNombre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tvMiNombre"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDesarrollador"
        app:layout_constraintVertical_bias="0.15"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tvMiCodigo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tvMiCodigo"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMiNombre"
        app:layout_constraintVertical_bias="0.05"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tvMiCorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tvMiCorreo"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMiCodigo"
        app:layout_constraintVertical_bias="0.15"
        tools:layout_editor_absoluteX="16dp" />

    <TextView
        android:id="@+id/tvVersion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tvVersion"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMiCorreo"
        app:layout_constraintVertical_bias="0.05"
        tools:layout_editor_absoluteX="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>